:beetle: Fix alignment issues

--- a/gui/css/csp-measurement-tools.css
+++ b/gui/css/csp-measurement-tools.css
@@ -5,7 +5,7 @@
   top: 0;
   font-size: 1.4rem;
   background-color: rgba(20, 20, 20, 0.5);
-  border: 4px solid var(--cs-border-color);
+  border: 3px solid var(--cs-border-color);
   border-radius: 8px;
 }
 
